syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "gogoproto/gogo.proto";

package storage;

message CloudSource {
    string id                            = 1 [(gogoproto.moretags) = 'sql:"pk,type(uuid)"'];
    string name                          = 2 [(gogoproto.moretags) = 'sql:"unique"'];
    enum Type {
        PALADIN_CLOUD                    = 0;
        OCM                              = 1;
    }
    Type   type                          = 3;
    bool   skip_test_integration         = 4;

    oneof Config {
        PaladinCloudConfig paladin_cloud = 5;
        OCMConfig          ocm           = 6;
    }
}

message PaladinCloudConfig {
    string endpoint = 1 [(gogoproto.moretags) = 'scrub:"dependent"'];
    string token    = 2 [(gogoproto.moretags) = 'scrub:"always"'];
}

message OCMConfig {
    string endpoint = 1 [(gogoproto.moretags) = 'scrub:"dependent"'];
    string token    = 2 [(gogoproto.moretags) = 'scrub:"always"'];
}
